# AlphaTracker_1.0

./: CMakeLists.txt  README.md  run  settings.ini
.info/: .README_html.md  .markdown  .md.css  README.html  gui.txt  home.txt  settings (copia).txt  settings.txt
include/: common.h  console.h  functions.h  gui.h  settings.h  stack.h
output/: data.txt
src/: common.cc  console.cc  functions.cc  gui.cc  main.cc  settings.cc  stack.cc
